public/css/app.css
html, body {
    height: 100%;
}

.panel {
    background-color: #0C0B0D;
    height:  calc(100%);
    width: 16%;
    position: fixed;
    min-width: 250px;
    max-width: 350px;
    color: rgba(255, 255, 255, 0.6);
    font-family: "Outfit", sans-serif;
    overflow-x: hidden;
    transition: 0.5s;
    z-index: 1;
    top: 10px;
    left: 0;
    border-radius: 15px;
}
.panel:after{
    margin-left: 30%;
}
.closebtn{
    position: absolute;
    top: 0;
    right: 25px;
    font-size: 35px;
    margin-left: 50px;
}
.panel-maintext {
    margin-top: 30px;
    font-size: 20px;
    display: flex;
    justify-content: center;
    padding-bottom: 30px;
    color: rgba(255, 255, 255, 0.5);
    border-bottom: 1px solid rgba(255, 255, 255, 0.3);

}

.panel-action {
    color: rgba(255, 255, 255, 0.9);;
    align-content: center;
    display: flex;
    margin: 0px;
    text-decoration: none;
    padding-top: 15px;
    padding-bottom: 15px;
    padding-left: 15px;
}

.panel-action-text {
    margin-left: 10px;

}

.panel-action:hover {
    color: black;
    background-color: white;
    transition: 1s ease;
}

.panel-bottom {
    position: absolute;
    bottom: 0;
    width: 20%;
    min-width: 250px;
    max-width: 350px;
    /*left: 20px;*/
}


table {
    border-spacing: 10px 15px;
}

th {
    background-color: #0C0B0D;
    text-align: start;
    color: white;
}

th,
td {
    /*width: 150px;*/
    /*height: 30px;*/
    /*border: 1px solid black;*/
    padding: 15px;
    margin: 5px;
}

tr > td {
    padding-bottom: 1em;
}

h2 {
    color: #4287f5;
}

.tab {
    display: flex;
    justify-content: center;
}

.tablinks {
    background-color: rgba(162, 210, 255, 0.48);
    margin: 14px 10px;
    /*border: 1px  solid rgba(1,1,1,0.5);*/
    float: left;
    outline: none;
    cursor: pointer;
    padding: 14px 16px;
    transition: 0.3s;
}

.tablinks:hover {
    background-color: rgb(162, 210, 255);
    transition: 0.2s ease-in;

}

/*** COLORS ***/
p {
    margin-top: 30px;
}

.cntr {
    display: table;
    width: 100%;
    height: 100%;
}

.cntr .cntr-innr {
    display: table-cell;
    text-align: end;
    vertical-align: middle;
    margin-left: 10px;

}

/*** STYLES ***/
.search {
    display: inline-block;
    position: relative;
    height: 35px;
    width: 35px;
    box-sizing: border-box;
    margin: 0px 8px 7px 0px;
    padding: 7px 9px 0px 9px;
    border: 3px solid #ffffff;
    border-radius: 25px;
    transition: all 200ms ease;
    cursor: text;
}

.search:after {
    content: "";
    position: absolute;
    width: 3px;
    height: 20px;
    right: -5px;
    top: 21px;
    background: #ffffff;
    border-radius: 3px;
    transform: rotate(-45deg);
    transition: all 200ms ease;
}

.search.active,
.search:hover {
    width: 200px;
    margin-right: 0px;
}

.search.active:after,
.search:hover:after {
    height: 0px;
}

.search input {
    width: 100%;
    border: none;
    box-sizing: border-box;
    font-family: Helvetica;
    font-size: 15px;
    color: inherit;
    background: transparent;
    outline-width: 0px;
}


.search_bar {
    margin-bottom: 30px;
}

